--- a/global/templates/simple/header.html
+++ b/global/templates/simple/header.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="%styles:default%" />
-    <title><%title left='%blogtitle%' center='|' right='%blogpage%';%></title>
+    <title><%title left='%blog:title%' center='|' right='%blog:page%';%></title>
   </head>
 <body>
   <div class="header">
-    <h1>%blogtitle%</h1>
-    <p>%blogdesc%</p>
+    <h1>%blog:title%</h1>
+    <p>%blog:desc%</p>
   </div>
   <div class="topnav">
     <!-- TEMPLATE SUPPORT 'menu' -->
