--- a/global/templates/simple/post.html
+++ b/global/templates/simple/post.html
@@ -3,10 +3,10 @@
   <div class="leftcolumn">
     <!-- LOAD 'post' -->
       <div class="card">
-        <h2>%post_title%</h2>
-        <h5>%post_date% | %post_author% – %post_cat%</h5>
-        <div class="fakeimg" style="height:200px;">%postthumb%</div>
-        <p>%post_content%</p>
+        <h2>%post:title%</h2>
+        <h5>%post:date% | %post:author% – %post:cat%</h5>
+        <div class="fakeimg" style="height:200px;">%post:thumb%</div>
+        <p>%post:content%</p>
       </div>
     <!-- ENDLOAD -->
   </div>
